<resources>
    <string name="app_name">Mommy\'s Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mommy\'s Food</string>
    <string name="nav_header_subtitle">mommysfood@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">User Bill</string>
    <string name="menu_gallery">Food Consumed</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="mommy_s_food">Mommy\'s Food</string>
    <string name="developed_by_balaji">Developed by Balaji</string>
    <string name="save">Save</string>
    <string name="total_amount">Total Amount :</string>
    <string name="add_dish">+ Add Button</string>
    <string name="user_name">User Name</string>
    <string name="get_consumed_food">Get Consumed Food</string>
    <string name="all_paid">All Paid</string>
    <string name="fetch_bill">+ Fetch Bill</string>
</resources>
