<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="50sp"
                android:text="@string/user_name"
                android:textSize="20sp"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/user_identity"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="30sp"
                android:width="150sp" />
        </TableRow>

        <Button
            android:id="@+id/get_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/fetch_bill" />

        <ListView
            android:id="@+id/listview_user"
            android:layout_width="match_parent"
            android:layout_height="389dp"
            android:layout_marginTop="30sp"
            tools:listitem="@layout/dish_consumed">

        </ListView>

        <TextView
            android:id="@+id/totalamounttext"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="280dp"
            android:layout_weight="1"
            android:text="Due Amount : "
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/useramount"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:layout_gravity="start"
            android:layout_marginStart="150dp"
            android:layout_marginTop="-27dp"
            android:layout_marginEnd="200dp"
            android:text="0"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <Button
            android:id="@+id/share_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="-50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="Share Bill" />

        <Button
            android:id="@+id/fullpaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/all_paid" />

    </TableLayout>


</LinearLayout>